# pmi-analyzer

./: .gitignore  README.md  babel.cfg  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  monthly_update.yml
data/: shamkh_historical.csv
pmi_analyzer/: __init__.py  cli.py  exceptions.py  types.py
pmi_analyzer/data/: __init__.py  loader.py
pmi_analyzer/downloader/: __init__.py  iccima_downloader.py
pmi_analyzer/i18n/: __init__.py
pmi_analyzer/i18n/locales/en/: locales.po
pmi_analyzer/i18n/locales/fa/: locales.po
pmi_analyzer/metrics/: __init__.py  calculator.py  validators.py
pmi_analyzer/parser/: __init__.py  pdf_parser.py
pmi_analyzer/plotter/: __init__.py  plotly_plotter.py
pmi_analyzer/scraper/: __init__.py  archive_scraper.py  batch_downloader.py  batch_parser.py  deduplicator.py  link_store.py
pmi_analyzer/updater/: __init__.py  monthly_updater.py
scripts/: phase1_discover_links.py  phase2_download_and_parse.py  phase4_monthly_update.py
tests/: conftest.py
tests/integration/: test_calculator_integration.py
tests/unit/: test_archive_scraper.py  test_batch_downloader.py  test_calculator.py  test_deduplicator.py  test_exceptions.py  test_i18n.py  test_loader.py  test_monthly_updater.py  test_types.py  test_validators.py
